--- a/Assignment1/BigDataAssgnment1.ipynb
+++ b/Assignment1/BigDataAssgnment1.ipynb
@@ -11,12 +11,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8a0e18a172fb12e",
+   "metadata": {},
+   "source": [
+    "Task 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "28fef9d0b0cc9499",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-27T19:42:03.718131Z",
+     "start_time": "2024-05-27T19:42:03.712109Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "9\n",
+      "11\n",
+      "1\n",
+      "3\n",
+      "9\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "random_numbers = []\n",
+    "\n",
+    "for i in range(10):\n",
+    "    number = random.randint(1, 20)\n",
+    "    random_numbers.append(number)\n",
+    "\n",
+    "for number in random_numbers:\n",
+    "    if number % 2 != 0:\n",
+    "        print(number)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "473e4798-d275-4764-a25c-b7bd7e4a4bf8",
+   "id": "614f9a22f0c5a4e0",
    "metadata": {},
    "outputs": [],
-   "source": "\n"
+   "source": []
   }
  ],
  "metadata": {
