Refactored c and b to cube even numbers?

--- a/Assignment1/BigDataAssgnment1.ipynb
+++ b/Assignment1/BigDataAssgnment1.ipynb
@@ -20,29 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "28fef9d0b0cc9499",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-27T19:42:03.718131Z",
-     "start_time": "2024-05-27T19:42:03.712109Z"
+     "end_time": "2024-05-27T20:30:28.448503Z",
+     "start_time": "2024-05-27T20:30:28.431776Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n",
-      "9\n",
-      "11\n",
-      "1\n",
-      "3\n",
-      "9\n",
-      "3\n"
-     ]
-    }
-   ],
    "source": [
     "import random\n",
     "\n",
@@ -76,7 +60,42 @@
     "    [print(number) for number in random_numbers if number % 2 != 0]\n",
     "\n",
     "print_odd_numbers_list_comprehension()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of random numbers: [10, 2, 15, 4, 8, 4, 9, 5, 19, 16]\n",
+      "15\n",
+      "9\n",
+      "5\n",
+      "19\n",
+      "List of random numbers: [8, 10, 4, 11, 17, 19, 4, 20, 15, 2]\n",
+      "11\n",
+      "17\n",
+      "19\n",
+      "15\n",
+      "List of random numbers: [7, 9, 19, 9, 15, 9, 6, 5, 1, 19]\n",
+      "7\n",
+      "9\n",
+      "19\n",
+      "9\n",
+      "15\n",
+      "9\n",
+      "5\n",
+      "1\n",
+      "19\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The best loop is the for loop because it's readable and easy to understand",
+   "id": "9e47e6c01bec55a4"
   },
   {
    "metadata": {},
