Added some comments

--- a/Assignment1/Task2.ipynb
+++ b/Assignment1/Task2.ipynb
@@ -2,29 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2024-05-27T21:10:24.718450Z",
      "start_time": "2024-05-27T21:10:24.715452Z"
+    },
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
     }
    },
-   "source": [
-    "# Task (a)\n",
-    "a = [\"I\", \"like\", \"cookies\"]\n",
-    "b = a\n",
-    "b[2] = \"apples\"\n",
-    "print(a)\n",
-    "print(b)\n",
-    "\n",
-    "# Task (b)\n",
-    "a = [\"I\", \"like\", \"cookies\"]\n",
-    "b = a[:]\n",
-    "b[2] = \"apples\"\n",
-    "print(a)\n",
-    "print(b)\n"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -37,34 +26,32 @@
      ]
     }
    ],
-   "execution_count": 1
+   "source": [
+    "# Task 2a\n",
+    "a = [\"I\", \"like\", \"cookies\"]\n",
+    "b = a\n",
+    "b[2] = \"apples\"\n",
+    "print(a)\n",
+    "print(b)\n",
+    "\n",
+    "# Task 2b\n",
+    "a = [\"I\", \"like\", \"cookies\"]\n",
+    "b = a[:]\n",
+    "b[2] = \"apples\"\n",
+    "print(a)\n",
+    "print(b)\n"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f794dbdd1b591bfc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-27T21:15:34.723437Z",
      "start_time": "2024-05-27T21:15:34.719324Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "from copy import deepcopy\n",
-    "\n",
-    "# Task (c)\n",
-    "a = [\"I\", \"like\", [\"chocolate\", \"cookies\"]]\n",
-    "b = a[:]\n",
-    "b[2][1] = \"apples\"\n",
-    "print(a)\n",
-    "print(b)\n",
-    "\n",
-    "# Task (d)\n",
-    "a = [\"I\", \"like\", [\"chocolate\", \"cookies\"]]\n",
-    "b = deepcopy(a)\n",
-    "b[2][1] = \"apples\"\n",
-    "print(a)\n",
-    "print(b)\n"
-   ],
-   "id": "f794dbdd1b591bfc",
    "outputs": [
     {
      "name": "stdout",
@@ -77,28 +64,34 @@
      ]
     }
    ],
-   "execution_count": 2
+   "source": [
+    "from copy import deepcopy\n",
+    "\n",
+    "# Task 2c\n",
+    "a = [\"I\", \"like\", [\"chocolate\", \"cookies\"]]\n",
+    "b = a[:]\n",
+    "b[2][1] = \"apples\"\n",
+    "print(a)\n",
+    "print(b)\n",
+    "\n",
+    "# Task 2 d\n",
+    "a = [\"I\", \"like\", [\"chocolate\", \"cookies\"]]\n",
+    "b = deepcopy(a)\n",
+    "b[2][1] = \"apples\"\n",
+    "print(a)\n",
+    "print(b)\n"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "43dca34082e2a39e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-27T21:16:59.587737Z",
      "start_time": "2024-05-27T21:16:59.576975Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "# task 2 \n",
-    "def create_dict(n):\n",
-    "    my_dict = {}\n",
-    "    for i in range(n):\n",
-    "        my_dict[i] = i**2\n",
-    "    return my_dict\n",
-    "\n",
-    "n = 7\n",
-    "print(create_dict(n))\n"
-   ],
-   "id": "43dca34082e2a39e",
    "outputs": [
     {
      "name": "stdout",
@@ -108,23 +101,28 @@
      ]
     }
    ],
-   "execution_count": 3
+   "source": [
+    "# task 2 e\n",
+    "def create_dict(n):\n",
+    "    my_dict = {}\n",
+    "    for i in range(n):\n",
+    "        my_dict[i] = i**2\n",
+    "    return my_dict\n",
+    "\n",
+    "n = 7\n",
+    "print(create_dict(n))\n"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e9ef10d48a6ca798",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-27T21:17:06.624463Z",
      "start_time": "2024-05-27T21:17:06.621358Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "keys_list = []\n",
-    "for key in create_dict(7).keys():\n",
-    "    keys_list.append(key)\n",
-    "print(keys_list)\n"
-   ],
-   "id": "e9ef10d48a6ca798",
    "outputs": [
     {
      "name": "stdout",
@@ -134,34 +132,40 @@
      ]
     }
    ],
-   "execution_count": 4
+   "source": [
+    "# Task 2 f\n",
+    "keys_list = []\n",
+    "for key in create_dict(7).keys():\n",
+    "    keys_list.append(key)\n",
+    "print(keys_list)\n"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "befd4f40b492b220"
+   "id": "befd4f40b492b220",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
