code cleanup and did d and e

--- a/Assignment1/Task1.ipynb
+++ b/Assignment1/Task1.ipynb
@@ -2,29 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "497657fb-f236-401f-9e0d-37562220917f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 6, 10, 4, 13, 20, 2, 3, 16, 9]\n",
-      "1 13 3 9 "
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-28T10:02:06.282002Z",
+     "start_time": "2024-05-28T10:02:06.276796Z"
     }
-   ],
+   },
    "source": [
     "#Before coding we need to import the required libraries\n",
     "\n",
     "#1a/\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import random\n",
-    "import math\n",
-    "from functools import reduce\n",
     "\n",
     "# using For loop\n",
     "\n",
@@ -35,32 +25,28 @@
     "for num_1 in list: \n",
     "    if num_1 % 2 != 0: \n",
     "        print(num_1, end = \" \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "68290f5f-e954-4497-9494-172b563a69f7",
-   "metadata": {},
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 10, 19, 9, 18, 8, 5, 13, 21, 1]\n"
+      "[14, 17, 15, 16, 3, 10, 3, 17, 6, 7]\n",
+      "17 15 3 3 17 7 "
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[19, 9, 5, 13, 21, 1]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "id": "68290f5f-e954-4497-9494-172b563a69f7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-28T10:02:06.288786Z",
+     "start_time": "2024-05-28T10:02:06.283005Z"
+    }
+   },
    "source": [
     "#Using for loop\n",
     "def random_number():\n",
@@ -85,32 +71,37 @@
     "list1= random_number()\n",
     "print(list1)\n",
     "mapping(list1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "2397af40-1dc6-47e9-8395-16e3ec76e661",
-   "metadata": {},
+   ],
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the value of n:  6\n"
+      "[3, 3, 21, 3, 5, 5, 17, 18, 4, 17]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0, 4]"
+       "[3, 3, 21, 3, 5, 5, 17, 17]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "id": "2397af40-1dc6-47e9-8395-16e3ec76e661",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-28T10:02:09.508656Z",
+     "start_time": "2024-05-28T10:02:06.288786Z"
+    }
+   },
    "source": [
     "#1 b/\n",
     "\n",
@@ -128,32 +119,30 @@
     "    newlst =[x for x in lst if x in listofpower2]\n",
     "    return newlst\n",
     "listOfPowerTwo(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "81e73224-9d3d-43ca-9a3c-91dcdcc11552",
-   "metadata": {},
+   ],
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the value of n:  6\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "[0]"
+       "[0, 4]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "id": "81e73224-9d3d-43ca-9a3c-91dcdcc11552",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-28T10:02:10.709550Z",
+     "start_time": "2024-05-28T10:02:09.509660Z"
+    }
+   },
    "source": [
     "#1c\n",
     "## Its possible to change the second power to the cube of the numbers by changing one value in the coding file,\n",
@@ -170,42 +159,109 @@
     "    newlst =[x for x in lst if x in listofpower2]\n",
     "    return newlst\n",
     "listOfPowerTwo(n)"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 8]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
    "id": "b88ce828-970d-4a07-83dd-5c3ee00f5f0c",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2148838473.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 8\u001b[1;36m\u001b[0m\n\u001b[1;33m    even num = list(filter(lambda x: (x % 2 == 0), lst1))\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-28T10:03:54.499850Z",
+     "start_time": "2024-05-28T10:03:53.048449Z"
     }
-   ],
+   },
    "source": [
     "# 1d/\n",
     "\n",
-    "n = input(\"Enter the value of n: \")\n",
-    "n = int(n)\n",
-    "#lst = [i for i in range(0,n)]\n",
-    "list1 = [x for x in range(n) if x % 2 == 0 if x < n]\n",
-    "#print(list1)\n",
-    "even num = list(filter(lambda x: (x % 2 == 0), lst1))\n",
-    "print(\"List of Even numbers: \", even num)"
-   ]
+    "# ask the user for input\n",
+    "n = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "# check if even\n",
+    "is_even = lambda x: x % 2 == 0\n",
+    "\n",
+    "# generate list even numbers\n",
+    "even_numbers = [i for i in range(n) if is_even(i)]\n",
+    "\n",
+    "# Print  list\n",
+    "print(even_numbers)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "149fc5fa-2731-43fc-aa7e-64707dce2ef8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-28T10:06:00.723480Z",
+     "start_time": "2024-05-28T10:06:00.719447Z"
+    }
+   },
+   "source": [
+    "# 1 e\n",
+    "\n",
+    "from functools import reduce\n",
+    "\n",
+    "# Define the pounds to kg function\n",
+    "def pounds_to_kg(pounds):\n",
+    "    return pounds * 0.453592\n",
+    "\n",
+    "# list of weights in pounds\n",
+    "weights_in_pounds = [202, 115.4, 126, 119.5, 227, 128, 231]\n",
+    "\n",
+    "# convert list using comprehension\n",
+    "weights_in_kg = [pounds_to_kg(weight) for weight in weights_in_pounds]\n",
+    "print(\"Weights in kilograms:\", weights_in_kg)\n",
+    "\n",
+    "# filter b/w 56 kg to 91.5 kg\n",
+    "filtered_weights = [weight for weight in weights_in_kg if 56 <= weight <= 91.5]\n",
+    "print(\"Filtered weights:\", filtered_weights)\n",
+    "\n",
+    "# compute sum of the filtered weights using the reduce function\n",
+    "total_weight = reduce(lambda x, y: x + y, filtered_weights)\n",
+    "print(\"Sum of filtered weights:\", total_weight)\n"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weights in kilograms: [91.625584, 52.3445168, 57.152592, 54.204244, 102.965384, 58.059776, 104.779752]\n",
+      "Filtered weights: [57.152592, 58.059776]\n",
+      "Sum of filtered weights: 115.212368\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": []
+   "execution_count": null,
+   "source": "",
+   "id": "17e3195797601117"
   }
  ],
  "metadata": {
