--- a/Assignment1/Task3.ipynb
+++ b/Assignment1/Task3.ipynb
@@ -1,13 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c8b1d0d332f112c3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-28T08:34:53.087836Z",
      "start_time": "2024-05-28T08:34:53.083797Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[843 864]\n",
+      " [354 551]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 3 a\n",
     "\n",
@@ -28,25 +40,14 @@
     "\n",
     "C = np.dot(A, B)\n",
     "print(C)\n"
-   ],
-   "id": "c8b1d0d332f112c3",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[843 864]\n",
-      " [354 551]]\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "4230a7e1ccad1956",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Task 3 b\n",
     "\n",
@@ -58,17 +59,38 @@
     "# Step 3: Shuffle and Sort, group pairs by keys\n",
     "# Step 4: Reduce step: multiply and sum.\n",
     "# C[0,0], C[0,1],C[,0],C[1,1],\n"
-   ],
-   "id": "4230a7e1ccad1956"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "364375961a2d985c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-28T08:48:57.014812Z",
      "start_time": "2024-05-28T08:48:57.010034Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix A:\n",
+      "[5, 19, 23]\n",
+      "[7, 13, 2]\n",
+      "\n",
+      "Matrix B:\n",
+      "[3, 31]\n",
+      "[23, 24]\n",
+      "[17, 11]\n",
+      "\n",
+      "Matrix C:\n",
+      "[843, 864]\n",
+      "[354, 551]\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 3 c\n",
     "\n",
@@ -104,56 +126,34 @@
     "print(\"\\nMatrix C:\")\n",
     "for row in C:\n",
     "    print(row)\n"
-   ],
-   "id": "364375961a2d985c",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix A:\n",
-      "[5, 19, 23]\n",
-      "[7, 13, 2]\n",
-      "\n",
-      "Matrix B:\n",
-      "[3, 31]\n",
-      "[23, 24]\n",
-      "[17, 11]\n",
-      "\n",
-      "Matrix C:\n",
-      "[843, 864]\n",
-      "[354, 551]\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "259f11ab6b7893ee"
+   "id": "259f11ab6b7893ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
